[gd_scene load_steps=7 format=3 uid="uid://datgmc8bia5q5"]

[ext_resource type="Script" path="res://scripts/falling-platform.gd" id="1_3d8d4"]
[ext_resource type="Texture2D" uid="uid://ka358ifcamw2" path="res://assets/Commons/falling-platform-green.png" id="2_7pw3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ndkyh"]
size = Vector2(32, 16)

[sub_resource type="Animation" id="Animation_i2nur"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_iyu02"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h6yb2"]
_data = {
"RESET": SubResource("Animation_i2nur"),
"shake": SubResource("Animation_iyu02")
}

[node name="FallingPlatformAB2D" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_3d8d4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7pw3e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ndkyh")
one_way_collision = true

[node name="RespawnTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h6yb2")
}

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
